QPID-8426: [Broker-J] Update service principal names in login module to match host domain