@@ -19,7 +19,7 @@
 
 package org.apache.qpid.server.security.auth.manager;
 
-import static org.apache.commons.codec.CharEncoding.UTF_8;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
@@ -29,21 +29,17 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.net.InetAddress;
-import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.file.Path;
 import java.security.Principal;
 import java.util.Base64;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.Properties;
 
 import org.ietf.jgss.GSSException;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.apache.qpid.server.security.TokenCarryingPrincipal;
 import org.apache.qpid.server.security.auth.AuthenticationResult;
@@ -55,14 +51,13 @@ import org.apache.qpid.test.utils.UnitTestBase;
 
 public class SpnegoAuthenticatorTest extends UnitTestBase
 {
-    private static final Logger LOGGER = LoggerFactory.getLogger(SpnegoAuthenticatorTest.class);
     private static final String CLIENT_NAME = "client";
     private static final String HOST_NAME = InetAddress.getLoopbackAddress().getCanonicalHostName();
     private static final String SERVER_NAME = "AMQP/" + HOST_NAME;
     private static final String ANOTHER_SERVICE = "foo/" + HOST_NAME;
     private static final String REALM = "QPID.ORG";
     private static final String LOGIN_CONFIG = "login.config";
-    private static final KerberosUtilities UTILS = new KerberosUtilities();;
+    private static final KerberosUtilities UTILS = new KerberosUtilities();
 
     @ClassRule
     public static final EmbeddedKdcResource KDC = new EmbeddedKdcResource(HOST_NAME, 0, "QpidTestKerberosServer", REALM);
@@ -80,13 +75,10 @@ public class SpnegoAuthenticatorTest extends UnitTestBase
         KDC.createPrincipal("broker.keytab", SERVER_NAME + "@" + REALM);
         KDC.createPrincipal("client.keytab", CLIENT_NAME + "@" + REALM);
         KDC.createPrincipal("another.keytab", ANOTHER_SERVICE + "@" + REALM);
-        final URL resource = KerberosAuthenticationManagerTest.class.getClassLoader().getResource(LOGIN_CONFIG);
-        LOGGER.debug("JAAS config:" + resource);
-        assertNotNull(resource);
-        SYSTEM_PROPERTY_SETTER.setSystemProperty("java.security.auth.login.config", URLDecoder.decode(resource.getPath(), UTF_8));
+        final Path loginConfig = UTILS.transformLoginConfig(LOGIN_CONFIG, HOST_NAME);
+        SYSTEM_PROPERTY_SETTER.setSystemProperty("java.security.auth.login.config",
+                                                 URLDecoder.decode(loginConfig.toFile().getAbsolutePath(), UTF_8.name()));
         SYSTEM_PROPERTY_SETTER.setSystemProperty("javax.security.auth.useSubjectCredsOnly", "false");
-
-        KerberosUtilities.debugConfig();
     }
 
     @Before
